# Operating-Systems-OS161

./: .gitignore  .test161.conf  CMakeLists.txt  README.md
kern/arch/mips/conf/: conf.arch
kern/arch/mips/locore/: trap.c
kern/arch/mips/syscall/: syscall.c
kern/arch/mips/vm/: vm.c
kern/conf/: ASST3  conf.kern
kern/include/: addrspace.h  coremap.h  fdtable.h  pagetable.h  proc.h  synch.h  syscall.h  uio.h  vm.h
kern/lib/: uio.c
kern/main/: main.c  menu.c
kern/proc/: fdtable.c  proc.c
kern/synchprobs/: stoplight.c  whalemating.c
kern/syscall/: file_syscalls.c  process_syscalls.c  runprogram.c  sbrk_syscall.c
kern/thread/: synch.c  thread.c
kern/vm/: addrspace.c  coremap.c  pagetable.c
